--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="tap_to_pick_start_point">Tap to pick start point</string>
+    <string name="tap_to_pick_finish_point">Tap to pick finish point</string>
+    <string name="tap_to_pick_date_and_time">Tap to pick date and time</string>
+    <string name="description">Description</string>
+    <string name="title">Title</string>
 </resources>
