--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="tap_to_pick_date_and_time">Tap to pick date and time</string>
     <string name="description">Description</string>
     <string name="title">Title</string>
+    <string name="create_group_ride">Create Group Ride</string>
 </resources>
