--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Bicycle City</string>
+    <string name="geo_api_key">AIzaSyCjeU5QRxtMDS4ltOPlyerB744f7okKsoA</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -22,7 +23,6 @@
     <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
     <string name="tap_to_pick_start_point">Tap to pick start point</string>
