--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="create_group_ride">Create Group Ride</string>
     <string name="mins_placeholder">%d mins</string>
     <string name="km_placeholder">%.1f km</string>
+    <string name="loading_failed">Loading failed</string>
 </resources>
