--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Bicycle City</string>
-    <string name="geo_api_key">AIzaSyCjeU5QRxtMDS4ltOPlyerB744f7okKsoA</string>
     <string name="geo_api_server_key">AIzaSyC2jsENnu-uLEhXNkXwnIdM5e_qzKCpBO8</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
@@ -26,11 +25,31 @@
 
     <string name="tap_to_pick_start_point">Tap to pick start point</string>
     <string name="tap_to_pick_finish_point">Tap to pick finish point</string>
-    <string name="tap_to_pick_date_and_time">Tap to pick date and time</string>
+    <string name="tap_to_pick_date_or_time">Tap to pick date or time</string>
     <string name="description">Description</string>
     <string name="title">Title</string>
     <string name="create_group_ride">Create Group Ride</string>
     <string name="mins_placeholder">%d mins</string>
     <string name="km_placeholder">%.1f km</string>
     <string name="loading_failed">Loading failed</string>
+    <string name="title_activity_create_group_ride">Create group ride</string>
+    <string name="title_activity_create_group_ride_route">Select the route</string>
+    <string name="select">Select</string>
+    <string name="choose_your_average_speed_usually">Choose your average speed usually</string>
+
+    <string-array name="avg_speed">
+        <item>10 km/h</item>
+        <item>15 km/h</item>
+        <item>20 km/h</item>
+        <item>25 km/h</item>
+        <item>30 km/h</item>
+        <item>35 km/h</item>
+        <item>40 km/h</item>
+        <!--<item>over 35 km/h</item>-->
+    </string-array>
+    <string name="title_activity_maps">Map</string>
+    <string name="failed">Failed</string>
+    <string name="loading">Loading</string>
+    <string name="please_wait">Please wait…</string>
+    <string name="required">Required</string>
 </resources>
