--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,12 @@
     <string name="riders">Riders</string>
     <string name="creator">Creator:</string>
     <string name="user_full_name_placeholder">%s %s</string>
+    <string name="markers_type">Markers type</string>
+
+    <string-array name="marker_types">
+        <item>All</item>
+        <item>Parking</item>
+        <item>Rent</item>
+        <item>Workshop</item>
+    </string-array>
 </resources>
