--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Bicycle City</string>
-    <string name="geo_api_server_key">AIzaSyC2jsENnu-uLEhXNkXwnIdM5e_qzKCpBO8</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -9,12 +8,10 @@
     <string name="last_name">Last Name</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="register">Register</string>
-    <string name="title_activity_menu">MenuActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
     <string name="feed">Feed</string>
     <string name="news">News</string>
     <string name="events">Events</string>
@@ -22,7 +19,6 @@
     <string name="competitions">Competitions</string>
     <string name="map">Map</string>
     <string name="other">Other</string>
-    <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
 
     <string name="tap_to_pick_start_point">Tap to pick start point</string>
@@ -32,14 +28,14 @@
     <string name="title">Title</string>
     <string name="create_group_ride">Create Group Ride</string>
     <string name="mins_placeholder">%d mins</string>
-    <string name="km_placeholder">%.1f km</string>
+    <string name="km_placeholder">%.2f km</string>
     <string name="loading_failed">Loading failed</string>
     <string name="title_activity_create_group_ride">Create group ride</string>
     <string name="title_activity_create_group_ride_route">Select the route</string>
     <string name="title_activity_create_competition">Create competition</string>
     <string name="title_activity_competition_result">Competition results</string>
     <string name="select">Select</string>
-    <string name="choose_your_average_speed_usually">Choose your average speed usually</string>
+    <string name="choose_your_average_speed_usually">Choose your usually average speed</string>
 
     <string-array name="avg_speed">
         <item>10 km/h</item>
@@ -85,6 +81,7 @@
     <string name="finish_point">Finish Point</string>
     <string name="recommended_training_level">Recommended training level :</string>
     <string name="recommended_bicycle_type">Recommended bicycle type :</string>
+    <string name="bicycle_city_here_service" translatable="false">Bicycle City HERE Service</string>
 
     <string-array name="marker_types">
         <item>All</item>
