--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -35,7 +35,7 @@
     <string name="title_activity_create_group_ride_route">Виберіть маршрут</string>
     <string name="title_activity_create_competition">Створення змагання</string>
     <string name="title_activity_competition_result">Результати змагання</string>
-    <string name="select">Виберіть</string>
+    <string name="select">Вибрати</string>
     <string name="choose_your_average_speed_usually">Виберіть свою звичайну середню швидкість</string>
     <string name="title_activity_maps">Карта</string>
     <string name="failed">Не вдалося</string>
@@ -68,4 +68,18 @@
     <string name="prize">Приз</string>
     <string name="professional">Професіонал</string>
     <string name="everyday_rider">Повсякденний</string>
+
+    <string-array name="marker_types">
+        <item>Усі</item>
+        <item>Паркінг</item>
+        <item>Оренда</item>
+        <item>Майстерня</item>
+    </string-array>
+
+    <string-array name="bicycle_types">
+        <item>Шосейний</item>
+        <item>Гірний</item>
+        <item>Трековий</item>
+        <item>Тріатлон</item>
+    </string-array>
 </resources>
